Display login page

--- a/Todo.Web/ClientApp/app/layouts/auth/auth-layout.component.html
+++ b/Todo.Web/ClientApp/app/layouts/auth/auth-layout.component.html
@@ -1,2 +1,5 @@
-
-  <router-outlet></router-outlet>
+<div class="wrapper wrapper-full-page">
+    <header-cmp></header-cmp>
+    <router-outlet></router-outlet>
+    <footer-cmp></footer-cmp>
+</div>
