--- a/Todo.Web/ClientApp/app/components/header/header.component.html
+++ b/Todo.Web/ClientApp/app/components/header/header.component.html
@@ -7,22 +7,22 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/#/dashboard">MD Pro Angular</a>
+            <a class="navbar-brand" href="/#/dashboard">Todo</a>
         </div>
         <div class="collapse navbar-collapse" id="menu-example">
             <ul class="nav navbar-nav navbar-right">
-                <li>
+                <!--<li>
                     <a href="/dashboard">
                         <i class="material-icons">dashboard</i> Dashboard
                     </a>
-                </li>
-                <li class="">
-                    <a href="/pages/register">
+                </li>-->
+                <li  routerLinkActive="active">
+                    <a routerLink="/register">
                         <i class="material-icons">person_add</i> Register
                     </a>
                 </li>
-                <li class=" active ">
-                    <a href="/pages/login">
+                <li  routerLinkActive="active">
+                    <a routerLink="/login">
                         <i class="material-icons">fingerprint</i> Login
                     </a>
                 </li>
