--- a/Todo.Web/ClientApp/app/components/navbar/navbar.component.html
+++ b/Todo.Web/ClientApp/app/components/navbar/navbar.component.html
@@ -54,8 +54,16 @@
                     <li>
                         <a href="#pablo" class="dropdown-toggle" data-toggle="dropdown">
                             <i class="material-icons">person</i>
-                            <p class="hidden-lg hidden-md">Profile</p>
+                            <p class="hidden-lg hidden-md">
+                                Profile
+                                <b class="caret"></b>
+                            </p>
                         </a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="#" (click)="logout()">Log out</a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="separator hidden-lg hidden-md"></li>
                 </ul>
