--- a/Todo.Web/ClientApp/app/pages/register/register.component.html
+++ b/Todo.Web/ClientApp/app/pages/register/register.component.html
@@ -1,168 +1,120 @@
-<div class="wrapper wrapper-full-page">
-    <nav class="navbar navbar-primary navbar-transparent navbar-absolute">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#menu-example">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="/#/dashboard">MD Pro Angular</a>
-            </div>
-            <div class="collapse navbar-collapse" id="menu-example">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="/dashboard">
-                            <i class="material-icons">dashboard</i> Dashboard
-                        </a>
-                    </li>
-                    <li class=" active ">
-                        <a href="/pages/register">
-                            <i class="material-icons">person_add</i> Register
-                        </a>
-                    </li>
-                    <li class="">
-                        <a href="/pages/login">
-                            <i class="material-icons">fingerprint</i> Login
-                        </a>
-                    </li>
-                    <li class="">
-                        <a href="/pages/lock">
-                            <i class="material-icons">lock_open</i> Lock
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <div class="full-page register-page" filter-color="black" data-image="../assets/img/register.jpeg">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-10 col-md-offset-1">
-                    <div class="card card-signup">
-                        <h2 class="card-title text-center">Register</h2>
-                        <div class="row">
-                            <div class="col-md-5 col-md-offset-1">
+<div class="full-page register-page" filter-color="black" data-image>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-10 col-md-offset-1">
+                <div class="card card-signup">
+                    <h2 class="card-title text-center">Register</h2>
+                    <div class="row">
+                        <div class="col-md-5 col-md-offset-1">
+                            <div class="card-content">
+                                <div class="info info-horizontal">
+                                    <div class="icon icon-rose">
+                                        <i class="material-icons">timeline</i>
+                                    </div>
+                                    <div class="description">
+                                        <h4 class="info-title">Marketing</h4>
+                                        <p class="description">
+                                            We've created the marketing campaign of the website. It was a very interesting collaboration.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="info info-horizontal">
+                                    <div class="icon icon-primary">
+                                        <i class="material-icons">code</i>
+                                    </div>
+                                    <div class="description">
+                                        <h4 class="info-title">Fully Coded in HTML5</h4>
+                                        <p class="description">
+                                            We've developed the website with HTML5 and CSS3. The client has access to the code using GitHub.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="info info-horizontal">
+                                    <div class="icon icon-info">
+                                        <i class="material-icons">group</i>
+                                    </div>
+                                    <div class="description">
+                                        <h4 class="info-title">Built Audience</h4>
+                                        <p class="description">
+                                            There is also a Fully Customizable CMS Admin Dashboard for this product.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-5">
+                            <!--<div class="social text-center">
+                                <button class="btn btn-just-icon btn-round btn-twitter">
+                                    <i class="fa fa-twitter"></i>
+                                </button>
+                                <button class="btn btn-just-icon btn-round btn-dribbble">
+                                    <i class="fa fa-dribbble"></i>
+                                </button>
+                                <button class="btn btn-just-icon btn-round btn-facebook">
+                                    <i class="fa fa-facebook"> </i>
+                                </button>
+                                <h4> or be classical </h4>
+                            </div>-->
+                            <div style="height: 63px;display:table-cell;vertical-align: bottom;">
+                                <p class="category text-center" [hidden]="model.message && !registerForm.submitted">
+                                    <small class="text-danger">
+                                        {{model.message}}
+                                    </small>
+                                </p>
+                            </div>
+                            <form class="form" #registerForm="ngForm" (ngSubmit)="onSubmit(registerForm)">
                                 <div class="card-content">
-                                    <div class="info info-horizontal">
-                                        <div class="icon icon-rose">
-                                            <i class="material-icons">timeline</i>
-                                        </div>
-                                        <div class="description">
-                                            <h4 class="info-title">Marketing</h4>
-                                            <p class="description">
-                                                We've created the marketing campaign of the website. It was a very interesting collaboration.
-                                            </p>
-                                        </div>
+                                    <div class="input-group">
+                                        <span class="input-group-addon">
+                                            <i class="material-icons">face</i>
+                                        </span>
+                                        <input type="text" [(ngModel)]="model.userName" required #userName="ngModel" name="userName" class="form-control" placeholder="User Name...">
+                                        <small [hidden]="userName.valid || (userName.pristine && !registerForm.submitted)" class="text-danger">
+                                            User Name is required
+                                        </small>
                                     </div>
-                                    <div class="info info-horizontal">
-                                        <div class="icon icon-primary">
-                                            <i class="material-icons">code</i>
-                                        </div>
-                                        <div class="description">
-                                            <h4 class="info-title">Fully Coded in HTML5</h4>
-                                            <p class="description">
-                                                We've developed the website with HTML5 and CSS3. The client has access to the code using GitHub.
-                                            </p>
-                                        </div>
+                                    <div class="input-group">
+                                        <span class="input-group-addon">
+                                            <i class="material-icons">lock_outline</i>
+                                        </span>
+                                        <input type="password" [(ngModel)]="model.password" required #password="ngModel" id="password" name="password" class="form-control" placeholder="Password...">
+                                        <small [hidden]="password.valid || (password.pristine && !registerForm.submitted)" class="text-danger">
+                                            Password is required
+                                        </small>
                                     </div>
-                                    <div class="info info-horizontal">
-                                        <div class="icon icon-info">
-                                            <i class="material-icons">group</i>
-                                        </div>
-                                        <div class="description">
-                                            <h4 class="info-title">Built Audience</h4>
-                                            <p class="description">
-                                                There is also a Fully Customizable CMS Admin Dashboard for this product.
-                                            </p>
-                                        </div>
+                                    <div class="input-group">
+                                        <span class="input-group-addon">
+                                            <i class="material-icons">lock_outline</i>
+                                        </span>
+                                        <input type="password" [(ngModel)]="model.confirmPassword" required #confirmPassword="ngModel" name="confirmPassword"
+                                               placeholder="Confirm Password..." class="form-control" validateEqual="password" />
+                                        <small [hidden]="confirmPassword.valid || (confirmPassword.pristine && !registerForm.submitted)" class="text-danger">
+                                            Confirm Password is required
+                                        </small>
+                                    </div>
+                                    <!-- If you want to add a checkbox to this form, uncomment this code -->
+                                    <div class="checkbox">
+                                        <label>
+                                            <input type="checkbox" name="optionsCheckboxes" checked> I agree to the
+                                            <a href="#">terms and conditions</a>.
+                                        </label>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-md-5">
-                                <div class="social text-center">
-                                    <button class="btn btn-just-icon btn-round btn-twitter">
-                                        <i class="fa fa-twitter"></i>
-                                    </button>
-                                    <button class="btn btn-just-icon btn-round btn-dribbble">
-                                        <i class="fa fa-dribbble"></i>
-                                    </button>
-                                    <button class="btn btn-just-icon btn-round btn-facebook">
-                                        <i class="fa fa-facebook"> </i>
-                                    </button>
-                                    <h4> or be classical </h4>
+                                <div class="footer text-center">
+                                    <button type="submit" class="btn btn-primary btn-round" [disabled]="!registerForm.form.valid">Get Started</button>
                                 </div>
-                                <form class="form" method="" action="">
-                                    <div class="card-content">
-                                        <div class="input-group">
-                                            <span class="input-group-addon">
-                                                <i class="material-icons">face</i>
-                                            </span>
-                                            <input type="text" class="form-control" placeholder="First Name...">
-                                        </div>
-                                        <div class="input-group">
-                                            <span class="input-group-addon">
-                                                <i class="material-icons">email</i>
-                                            </span>
-                                            <input type="text" class="form-control" placeholder="Email...">
-                                        </div>
-                                        <div class="input-group">
-                                            <span class="input-group-addon">
-                                                <i class="material-icons">lock_outline</i>
-                                            </span>
-                                            <input type="password" placeholder="Password..." class="form-control" />
-                                        </div>
-                                        <!-- If you want to add a checkbox to this form, uncomment this code -->
-                                        <div class="checkbox">
-                                            <label>
-                                                <input type="checkbox" name="optionsCheckboxes" checked> I agree to the
-                                                <a href="#something">terms and conditions</a>.
-                                            </label>
-                                        </div>
-                                    </div>
-                                    <div class="footer text-center">
-                                        <a href="#pablo" class="btn btn-primary btn-round">Get Started</a>
-                                    </div>
-                                </form>
-                            </div>
+                            </form>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <footer class="footer">
-            <div class="container">
-                <nav class="pull-left">
-                    <ul>
-                        <li>
-                            <a href="#">
-                                Home
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Company
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Portfolio
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Blog
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
-                <p class="copyright pull-right">
-                    &copy;
-                    {{test | date: 'yyyy'}}
-                    <a href="https://www.creative-tim.com">Creative Tim</a>, made with love for a better web
-                </p>
-            </div>
-        </footer>
     </div>
+
+    <!--Workaround. Images in style='background-image: url(..)' cannot be resolve by html-loader directly,
+    so we set it in css. Awaiting below feature to be published.
+    https://github.com/webpack-contrib/html-loader/pull/142
+    <div class="full-page-background" style="background-image: url(../../../assets/img/register.jpeg)"></div>
+    -->
+    <div class="full-page-background my-bk-image"></div>
 </div>
