--- a/Todo.Web/ClientApp/assets/sass/material-dashboard.scss
+++ b/Todo.Web/ClientApp/assets/sass/material-dashboard.scss
@@ -1,7 +1,7 @@
 /*!
 
  =========================================================
- * Material Dashboard PRO Angular CLI - V1.2.1
+ * Material Dashboard PRO Angular CLI - V1.4.1
  =========================================================
 
  * Product Page: https://www.creative-tim.com/product/material-dashboard-pro-angular2
@@ -15,6 +15,7 @@
 @import "material-dashboard/variables";
 @import "material-dashboard/mixins";
 @import "material-dashboard/shadows";
+@import '../../../node_modules/@angular/material/theming';
 
 //plugin css
 @import "material-dashboard/plugins/plugin-nouislider";
