--- a/Todo.Web/ClientApp/app/components/header/header.component.html
+++ b/Todo.Web/ClientApp/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-primary navbar-transparent navbar-fixed-top">
+<nav class="navbar navbar-primary navbar-transparent navbar-absolute">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#menu-example">
@@ -26,8 +26,8 @@
                         <i class="material-icons">fingerprint</i> Login
                     </a>
                 </li>
-                <li class="">
-                    <a href="/pages/lock">
+                <li routerLinkActive="active">
+                    <a routerLink="/lock">
                         <i class="material-icons">lock_open</i> Lock
                     </a>
                 </li>
