--- a/Todo.Web/ClientApp/app/pages/login/login.component.html
+++ b/Todo.Web/ClientApp/app/pages/login/login.component.html
@@ -73,7 +73,7 @@
                                 <div class="input-group">
                                     <div class="checkbox">
                                         <label>
-                                            <input type="checkbox" name="rememberMe" [(ngModel)]="model.rememberMe"> Remember me?
+                                            <input type="checkbox" name="rememberMe" [(ngModel)]="model.rememberMe"> Remember me for two weeks?
                                         </label>
                                     </div>
                                 </div>
